--- a/MMM-next-episode.css
+++ b/MMM-next-episode.css
@@ -1,20 +1,16 @@
 /* MMM-next-episode.css */
 
-.MMM-next-episode {
-  /* Add your wrapper styles here */
-}
-
-.show-element {
+.MMM-next-episode .show-element {
   display: flex;
   align-items: center;
   margin-bottom: 10px;
 }
 
-.show-thumbnail {
+.MMM-next-episode .show-thumbnail {
   margin-right: 10px;
 }
 
-.air-date {
+.MMM-next-episode .air-date {
   flex-grow: 1;
   text-align: right;
 }
