--- a/MMM-next-episode.css
+++ b/MMM-next-episode.css
@@ -1,16 +1,15 @@
 /* MMM-next-episode.css */
 
 .MMM-next-episode .show-element {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;  /* Add space below each show element */
 }
 
 .MMM-next-episode .show-thumbnail {
-  margin-right: 10px;
+    margin-right: 10px;
 }
 
-.MMM-next-episode .air-date {
-  flex-grow: 1;
-  text-align: right;
+.MMM-next-episode .show-airdate {
+    margin-left: auto;  /* Align show.airDate text to the right */
 }
