--- a/MMM-next-episode.css
+++ b/MMM-next-episode.css
@@ -2,7 +2,7 @@
 
 .MMM-next-episode .show-element {
     display: flex;
-    align-items: center;
+    align-items: flex-start; /* Align items vertically at the top */
     margin-bottom: 10px;
 }
 
@@ -25,7 +25,6 @@
 }
 
 .MMM-next-episode .show-details .show-airdate {
-    margin-left: auto;
+    margin-left: auto; /* Align the show-airdate to the right */
     text-align: right;
-    align-self: flex-end; /* Align the show-airdate vertically */
 }
