--- a/MMM-next-episode.css
+++ b/MMM-next-episode.css
@@ -25,6 +25,6 @@
 }
 
 .MMM-next-episode .show-airdate {
-    margin-left: auto; /* Align the show-airdate to the right */
+    margin-left: 10px;
     text-align: right;
 }
