--- a/MMM-next-episode.css
+++ b/MMM-next-episode.css
@@ -16,11 +16,11 @@
     align-items: flex-start;
 }
 
+
+.MMM-next-episode .show-details .show-episode {
+    margin-bottom: 5px;
+}
 .MMM-next-episode .show-details .show-name {
     font-weight: bold;
 }
 
-.MMM-next-episode .show-airdate {
-    margin-left: 200px;
-    text-align: right;
-}
