--- a/MMM-next-episode.css
+++ b/MMM-next-episode.css
@@ -19,8 +19,10 @@
 
 .MMM-next-episode .show-details .show-episode {
     margin-bottom: 5px;
-}
-.MMM-next-episode .show-details .show-name {
-    font-weight: bold;
-}
 
+
+
+.MMM-next-episode .show-airdate {
+    margin-left: 200px;
+    text-align: right;
+}
