--- a/MMM-next-episode.css
+++ b/MMM-next-episode.css
@@ -14,7 +14,7 @@
     flex-grow: 1;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: left;
 }
 
 .MMM-next-episode .show-name {
