--- a/MMM-next-episode.css
+++ b/MMM-next-episode.css
@@ -13,6 +13,7 @@
 .MMM-next-episode .show-details {
     flex-grow: 1;
     display: flex;
+    justify-content: space-between;
     align-items: left;
 }
 
