--- a/MMM-next-episode.css
+++ b/MMM-next-episode.css
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    text-align: right;
 }
 
 .MMM-next-episode .show-name {
