--- a/MMM-next-episode.css
+++ b/MMM-next-episode.css
@@ -16,6 +16,7 @@
     justify-content: space-between;
     align-items: center;
     text-align: right;
+    margin-right: 100px;
 }
 
 .MMM-next-episode .show-name {
