--- a/MMM-next-episode.css
+++ b/MMM-next-episode.css
@@ -11,16 +11,18 @@
 }
 
 .MMM-next-episode .show-details {
-    display: flex;
-    flex-direction: column;
     flex-grow: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: right;
+    text-align: right;
 }
 
-.MMM-next-episode .show-details .show-name {
+.MMM-next-episode .show-name {
     font-weight: bold;
 }
 
-.MMM-next-episode .show-details .show-airdate {
+.MMM-next-episode .show-airdate {
     margin-left: 10px;
     text-align: right;
 }
