--- a/MMM-next-episode.css
+++ b/MMM-next-episode.css
@@ -1,21 +1,10 @@
 /* MMM-next-episode.css */
 
+/* Shared styles */
 .MMM-next-episode .show-element {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
-}
-
-.MMM-next-episode .show-thumbnail {
-    margin-right: 10px;
-}
-
-.MMM-next-episode .show-details {
-    flex-grow: 1;
-    display: flex;
-    justify-content: space-between;
-    align-items: right;
-    text-align: right;
 }
 
 .MMM-next-episode .show-name {
@@ -24,5 +13,20 @@
 
 .MMM-next-episode .show-airdate {
     margin-left: 10px;
+    text-align: right;
+}
+
+/* Styles when ShowThumbnail is true */
+.MMM-next-episode .show-thumbnail {
+    margin-right: 10px;
+}
+
+.MMM-next-episode .show-details {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+.MMM-next-episode .show-details .show-episode {
     text-align: right;
 }
